fix: 찜 기능 컨트롤러 엔드포인트 추가