@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,8 +33,9 @@ public class SpotLikeServiceImpl implements SpotLikeService {
 
         return spotLikeRepository.findByMember(member).stream()
                 .map(spotLike -> RestaurantResponseDto.from(spotLike.getRestaurant()))
-                .collect(Collectors.toList());
+                .toList();
     }
+
     @Override
     public void addLike(Long spotId, Long memberId) {
         Member member = memberRepository.findById(memberId)
